--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   loading_animation_widget: ^1.2.1
+  package_info_plus: ^6.0.0
+  url_launcher: ^6.2.5
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding.git
