--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
       ref: a738913c8ce2c9f47515382d40827e794a334274
   aptabase_flutter: ^0.1.1
   package_info_plus: ^4.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
