--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   aptabase_flutter: ^0.1.1
   package_info_plus: ^4.2.0
   shared_preferences: ^2.2.2
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -34,3 +35,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - bin/update.bat
